# AI-OBD-App

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
avyrox-drive/: README.md  settings.gradle.kts
avyrox-service/: README.md  gradle.properties  settings.gradle.kts
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_b2b_tables.py  0003_leads.py
backend/app/: main.py
backend/app/api/v1/: router.py  webhooks.py
backend/app/api/v1/auth/: verify.py
backend/app/api/v1/b2b/: cases.py  diagnostic.py  estimates.py  leads.py  reports.py  router.py  shop.py  subscription.py
backend/app/api/v1/b2c/: leads.py  router.py  scan.py  services.py  sessions.py  subscription.py  vehicles.py
backend/app/api/v1/shared/: dtc.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  diagnostic_case.py  error_code.py  lead.py  repair_cost.py  scan_session.py  shop.py  user.py  vehicle.py
backend/app/schemas/: b2b.py  b2c.py
backend/app/services/: pdf_service.py
backend/app/services/ai/: ai_service.py  llm_router.py  output_formatter.py  rag.py  rule_engine.py
backend/scripts/: seed_dtc.py  seed_shops.py
docs/: AI_Auto_Service_Assistant_MVP.md  AI_OBD_Diagnostic_MVP.md  AI_OBD_Diagnostic_Production_Strategy.md  api_contract.md  architecture.md  bainstorm.md  brainstorm_analysis.md  development_plan.md  prompts.md  (+1 more)
(+252 files in other folders)
