[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-obd-backend"
version = "0.1.0"
description = "AI OBD Ecosystem — Shared Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth
    "firebase-admin>=6.5.0",

    # Cache
    "redis[asyncio]>=5.0.0",

    # AI / LLM
    "anthropic>=0.30.0",
    "openai>=1.40.0",
    "pgvector>=0.3.0",

    # Payments
    "stripe>=10.0.0",

    # Utils
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # PDF generation (B2B reports & estimates)
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
